<resources>
    <string name="app_name">GridGuesser</string>
    <string name="enter_code">Enter Game Code</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="code">Code: </string>
    <string name="code_complete">AAAA</string>
    <string name="rules">Rules</string>
    <string name="rulelist">1. Each player will start by placing 5 squares\n2. Each turn they can attempt to hit one of their opponents squares by clicking a point on the grid\n3. Whoever guesses the placement of all their opponents squares first wins the game</string>
    <string name="back">Back</string>
    <string name="title_subtext">A Naval Strategy Game</string>
    <string name="active_games">Active Games</string>
    <string name="congratulations">Congratulations</string>
    <string name="winner">You Won!</string>
    <string name="sorry">Sorry</string>
    <string name="loser">You Lost</string>
    <string name="main_menu">To Main Menu</string>
    <string name="create_game_title">Game Title:</string>
    <string name="code_label">Code:</string>
    <string name="vs"> | </string>
    <string name="waiting_text"> Waiting for another player to join…</string>
    <string name="create_error_text">Sorry, we were unable to create your game, please try again later</string>
    <string name="join_error_text">Sorry, that game is either full or does not exist. Please try a different code</string>
    <string name="switch_toggle_daylight">Toggle Daylight Sensor</string>
    <string name="switch_toggle_temp">Toggle Temperature Sensor</string>
    <string name="username">Username</string>
    <string name="to_player"><![CDATA[<]]></string>
    <string name="opponents_ships">Opponents Ships</string>
    <string name="your_ships">Your Ships</string>
    <string name="carrier_5_spaces">Carrier - 5 Spaces</string>
    <string name="battleship_4_spaces">Battleship - 4 Spaces</string>
    <string name="cruiser_3_spaces">Cruiser- 3 Spaces</string>
    <string name="submarine_3_spaces">Submarine - 3 Spaces</string>
    <string name="destroyer_2_spaces">Destroyer - 2 Spaces</string>
    <string name="options">Options</string>
    <string name="o">O</string>

</resources>