<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:background="@color/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/rules"
            android:textAlignment="center"
            style="@style/header1"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="10dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:padding = "30dp"
            android:text="@string/rulelist"
            style="@style/button" />

        <Button
            android:id="@+id/backToGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back"
            style="@style/button"
            android:background="@drawable/button_primary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>